--- a/css/team.css
+++ b/css/team.css
@@ -17,7 +17,7 @@ src: url(font/BLANCH_CONDENSED.otf);
 }
 
 .teamPage {
-    background: #515f49;
+    background: url("../media/redbg.jpg");;
     justify-content: center;
     align-items: center;
 }
@@ -40,12 +40,13 @@ src: url(font/BLANCH_CONDENSED.otf);
 	flex-wrap: wrap;
 	margin: 0px 20px;
 	padding: 10px 10px;
-	background: cornsilk;
+	background: rgba(255,248,220,0.5);
     max-width: auto;
     margin-left: auto;
     margin-right: auto;
     content: "";
     clear: both;
+    border-radius: 25px;
 }
 
 .teamBox{
@@ -68,10 +69,10 @@ src: url(font/BLANCH_CONDENSED.otf);
 	justify-content: center;
 	width: 219.2px;
 	height: 66.8px;
-	background: #515f49;
-	color: white;
-	font-family: DIN;
-	font-size: 16px;
+	/*background: rgba(128,0,0,0.2);*/
+	color: black;
+	font-family: BLANCH_CONDENSED;
+	font-size: 25px;
 }
 
 .teamTitle1{
@@ -81,27 +82,24 @@ src: url(font/BLANCH_CONDENSED.otf);
 	justify-content: center;
 	width: 219.2px;
 	height: 66.8px;
-	background: #515f49;
-	color: white;
-	font-family: DIN;
-	font-size: 16px;
+	/*background: maroon;*/
+	color: black;
+	font-family: BLANCH_CONDENSED;
+	font-size: 25px;
 }
 
 .teamText {
-	border: solid cornsilk 1px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	position: absolute;
+    top: 50%;
+    left: 50%;
 	font-family: Helvetica, sans-serif;
-	padding: 10px;
 }
 
 .teamPic {
     position: relative;
     float: left;
-    padding: 5px;
     width: 180px;
-    border: solid black 1.5px;
+    border: solid black 2px;
 }
 
 .portrait {
@@ -117,19 +115,22 @@ src: url(font/BLANCH_CONDENSED.otf);
 
 .overlay {
     position: absolute;
-    top: 5px;
+    top: 0;
     bottom: 0;
-    left: 5px;
+    left: 0;
     right: 0;
-    height: 222.85px;
-    width: 167.18px;
-    opacity: 0;
     transition: 0.5s ease;
-    color: white;
+    color: black;
+    opacity: 0;
+    background: rgba(255,255,255,0.4);
 }
 
 .teamPic:hover .overlay {
     opacity: 1;
+}
+
+.teamPic:hover .portrait {
+    opacity: 0.4;
 }
 
 .teamPic:hover .overlay1 {
@@ -152,9 +153,9 @@ src: url(font/BLANCH_CONDENSED.otf);
     }
 
     .teamTitle {
-    	font-size: 14px;
-    	height: 50px;
-    	top: 10px;
+    	font-size: 23px;
+    	height: 75px;
+    	top: 0px;
     }
 
     .teamTitle1 {
