post meeting commit TODO: delete unused font

--- a/css/team.css
+++ b/css/team.css
@@ -8,6 +8,26 @@ font-family: BLANCH_CONDENSED;
 src: url(font/BLANCH_CONDENSED.otf);
 }
 
+@font-face {
+    font-family: MarketDeco;
+    src: url(font/Market_Deco.ttf)
+}
+
+@font-face {
+    font-family: WhiteAngelica;
+    src: url(font/WhiteAngelica.ttf)
+}
+
+@font-face {
+    font-family: DreamOrphans;
+    src: url(font/dreamorphans_it.ttf);
+}
+
+@font-face {
+    font-family: GT;
+    src: url(font/GTWalsheimRegular.ttf);
+}
+
 .teamPageTitle {
 	width: 80vw;
 	height: auto;
@@ -88,16 +108,16 @@ src: url(font/BLANCH_CONDENSED.otf);
 .teamText {
     font-weight: bold;
 	position: absolute;
-    top: 30%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
-	font-family: Helvetica, sans-serif;
+	font-family: GT;
     font-size: 25px;
 }
 
 .teamYear {
     position: absolute;
-    top: 70%;
+    top: 65%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 20px;
