--- a/css/home.css
+++ b/css/home.css
@@ -29,7 +29,7 @@
 .homeButton {
   width: 80%;
   font-size: 1400%;
-  font-family: BLANCH_CONDENSED;
+  font-family: BLANCH_CONDENSED, monospace;
   color: white;
   text-shadow: 10px 10px maroon;
   letter-spacing: 5px;
