--- a/css/joinus.css
+++ b/css/joinus.css
@@ -57,7 +57,7 @@ src: url(font/BLANCH_CONDENSED.otf);
     padding-left: 15px;
     text-indent: -15px;
     color: white;
-    font-family: Courier New;
+    font-family: Courier New, sans-serif;
 }
 
 .subcheck {
@@ -78,7 +78,7 @@ src: url(font/BLANCH_CONDENSED.otf);
     align-content: center;
     justify-content: center;
     opacity: 0.9;
-    padding: 10px 0px;
+    padding: 10px 0;
 }
 
 .footsocial .email:hover{
@@ -111,7 +111,7 @@ src: url(font/BLANCH_CONDENSED.otf);
     align-content: center;
     justify-content: center;
     color: white;
-    font-family: Courier New;
+    font-family: Courier New, sans-serif;
     padding: 10px 10px;
     background: black;
     opacity: 1;
@@ -144,7 +144,7 @@ input, textarea, select {
     color: black;
     font-size: 13px;
     line-height: 100%;
-    font-family: "Courier New";
+    font-family: "Courier New", sans-serif;
     width: 100%;
 }
 
@@ -187,13 +187,13 @@ form {
         height: 30px;
     }
     .submit-button{
-        font-family: "Courier New"
+        font-family: "Courier New", sans-serif;
     }
     #sponsor {
         height:auto;
     }
     .sponsorimg {
-        margin: 25px 0px;
+        margin: 25px 0;
     }
     input.subcheck {
         width: 7px;
