--- a/css/navigation-style.css
+++ b/css/navigation-style.css
@@ -19,13 +19,13 @@ src: url(font/BLANCH_CONDENSED.otf);
 }
 
 #gisauBrand {
-  font-family: BLANCH_CONDENSED;
+  font-family: BLANCH_CONDENSED, serif;
   font-size: 60px;
   margin-top: 3px;
 }
 
 #gisauTabs li a {
-  font-family: DIN;
+  font-family: DIN, monospace;
   font-size: 16px;
   margin-top: 5px;
 }
@@ -65,6 +65,69 @@ src: url(font/BLANCH_CONDENSED.otf);
 .navbar-collapse.in {
   overflow-y: auto;
 }
+
+/* Dropdown Button */
+.dropbtn {
+  position: center;
+  color: #9d9d9d;
+  padding: 18px 16px 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  font-family: DIN, monospace;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+  
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: whitesmoke;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  background-color: whitesmoke;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-menu a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
+
 @media (max-width: 900px) {
   #gisaunavsocial {
   display: none;
