--- a/css/navigation-style.css
+++ b/css/navigation-style.css
@@ -107,7 +107,7 @@ src: url(font/BLANCH_CONDENSED.otf);
   z-index: 1;
 }
 .dropdown-menu a {
-  color: black;
+  color: #9d9d9d;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
