--- a/css/covidfaq.css
+++ b/css/covidfaq.css
@@ -22,7 +22,6 @@ h1 {
 
 .contactmore {
     background: url("../media/background/redbg.jpg");
-    padding-left: 50px;
     font-size: 32px;
     font-family: BLANCH_CONDENSED, monospace;
     text-align: left;
@@ -33,13 +32,11 @@ h1 {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-
+    justify-content: center;
 }
 
 .contactBox {
     text-align: center;
-    margin: 10px 10px;
-    padding: 0 15px;
     opacity: 0.85;
     flex: 0 1 325px;
     float: left;
