--- a/css/covidfaq.css
+++ b/css/covidfaq.css
@@ -33,6 +33,7 @@ h1 {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
+    padding-bottom: 30px;
 }
 
 .contactBox {
@@ -40,7 +41,7 @@ h1 {
     opacity: 0.85;
     flex: 0 1 325px;
     float: left;
-
+    padding-bottom: 20px;
 }
 
 .logo {
