--- a/css/gue.css
+++ b/css/gue.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #FFF2C5;
+}
+
 .banner {
     width: 100%;
     background-color: #FFF9EF;
@@ -8,5 +12,68 @@
     display: block;
     height: auto;
     max-width: 100%;
+    max-height: 40vh;
+}
 
+.desc-box {
+    padding: 10px 20px 20px 20px;
+    margin: 20px 5% 20px 5%;
+    background-color: #ac2925;
+    border-radius: 25px;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-align: center;
+    font-size: 30px;
+}
+.description {
+
+}
+
+.mentors {
+
+    margin: 20px 5% 20px 5%;
+}
+
+.mentor-container-all {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px 3% 20px 3%;
+    /*border-radius: 25px;*/
+    /*background-color: #FFF9EF;*/
+    justify-content: space-between;
+}
+
+.mentor-container-indiv {
+    flex: 0 1 22.5%;
+    margin: 20px 20px 20px 20px;
+}
+
+.mentor-pic-box {
+    width: 100%;
+    height: 50%;
+}
+.mentor-pic {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.mentor-color-1 {
+    background-color: #2B425F;
+}
+
+.mentor-color-2 {
+    background-color: yellow;
+}
+
+@media (max-width: 700px) {
+    .mentor-container-indiv {
+        width: 40%;
+        margin: 10px 10px 10px 10px;
+    }
 }
