--- a/css/gue.css
+++ b/css/gue.css
@@ -31,36 +31,41 @@ h2 {
     font-size: 30px;
 }
 .description {
-
+    padding: 10px 10px 10px 10px;
+    font-size: 16px;
 }
 
 .mentors {
-    margin: 20px 5% 20px 5%;
+    margin: 20px 1% 20px 1%;
 }
 
 .mentor-container-all {
     display: flex;
     flex-wrap: wrap;
-    margin: 20px 3% 20px 3%;
+    margin: 20px 1% 20px 1%;
     /*border-radius: 25px;*/
     /*background-color: #FFF9EF;*/
     justify-content: space-between;
 }
 
 .mentor-container-indiv {
-    flex: 0 1 22.5%;
-    margin: 20px 20px 20px 20px;
+    flex: 1 0 20%;
+    margin: 1% 1% 1% 1%;
     border-radius: 15px;
+    overflow: auto;
 }
 
 .mentor-pic-box {
     width: 100%;
     height: 50%;
+
 }
+
 .mentor-pic {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    padding: 15px 10px 0 10px;
 }
 
 .mentor-color-1 {
@@ -71,9 +76,31 @@ h2 {
     background-color: #eec042;
 }
 
-@media (max-width: 700px) {
+.mentor-desc-box {
+    margin: 15% 20px 0 20px;
+}
+
+@media (max-width: 1919px) {
+    .description {
+        font-size: 14px;
+    }
+    h1 {
+        font-size: 24px;
+    }
+    h2 {
+        font-size: 18px;
+    }
     .mentor-container-indiv {
-        flex: 0 1 40%;
+        flex: 1 1 40%;
         margin: 10px 10px 10px 10px;
+    }
+    .mentors {
+        margin: 20px 5px 20px 5px;
+    }
+    .mentor-container-all {
+        margin: 5px 0 5px 0;
+    }
+    .mentor-desc-box {
+        margin: 15% 5px 0 5px;
     }
 }
