--- a/css/gue.css
+++ b/css/gue.css
@@ -111,7 +111,14 @@ h2 {
     margin: 15% 20px 0 20px;
 }
 
-@media (max-width: 1919px) {
+@media (max-width: 800px) {
+    .mentor-container-indiv {
+        flex: 1 1 40%;
+        margin: 10px 10px 10px 10px;
+    }
+}
+
+@media (max-width: 450px) {
     .description {
         font-size: 15px;
     }
@@ -124,6 +131,7 @@ h2 {
     .mentor-container-indiv {
         flex: 1 1 40%;
         margin: 10px 10px 10px 10px;
+        min-height: 80%;
     }
     .mentors {
         margin: 20px 5px 20px 5px;
