--- a/css/gue.css
+++ b/css/gue.css
@@ -70,7 +70,7 @@ h2 {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    padding: 15px 10px 0 10px;
+    padding: 20px 5px 0 5px;
 }
 
 .mentor-name {
@@ -91,6 +91,7 @@ h2 {
     font-family: Verdana, Geneva, sans-serif;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 10px;
 }
 
 .mentor-heading {
