try mobile fix: change font Roboto

--- a/css/indomie.css
+++ b/css/indomie.css
@@ -11,7 +11,7 @@ body {
 	/* background-image: url(../media/indomie_bg.jpeg); */
 	color: black;
 	font-size: 12px;
-	font-family: "Times New Roman";
+	font-family: "Roboto";
 	font-weight: bold;
 }
 
