--- a/css/community.css
+++ b/css/community.css
@@ -1,23 +1,23 @@
 @font-face {
-font-family: DIN;
-src: url(font/DIN.ttf);
+	font-family: DIN;
+	src: url(font/DIN.ttf);
 }
 
 @font-face {
-font-family: BLANCH_CONDENSED;
-src: url(font/BLANCH_CONDENSED.otf);
+	font-family: BLANCH_CONDENSED;
+	src: url(font/BLANCH_CONDENSED.otf);
 }
 
 .communityPage {
 	background-image: url('../media/background/redbg.jpg');
-    height: auto; 
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: repeat;
-    background-size: cover;
-    padding-bottom: 20px;
-    
-    padding-top: 20px;
+	height: auto;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: repeat;
+	background-size: cover;
+	padding-bottom: 20px;
+	margin-top: 75px;
+	padding-top: 20px;
 	width: 100%;
 }
 
@@ -27,7 +27,7 @@ src: url(font/BLANCH_CONDENSED.otf);
 
 .communityBox {
 	border: dashed black 2px;
-	background: #FAEEDE;
+	background: #faeede;
 	margin: 10px 10px;
 	padding: 0 15px;
 	opacity: 0.85;
@@ -42,7 +42,7 @@ src: url(font/BLANCH_CONDENSED.otf);
 
 .sponsorBox {
 	border: dashed black 2px;
-	background: #FAEEDE;
+	background: #faeede;
 	margin: 10px 10px;
 	padding: 0 5vw 20px 5vw;
 	opacity: 0.85;
@@ -58,12 +58,12 @@ src: url(font/BLANCH_CONDENSED.otf);
 
 .sponsorImg {
 	background-color: white;
-    max-width: 300px;
-  	max-height: 150px;
-  	width: auto;
-  	height: auto;
+	max-width: 300px;
+	max-height: 150px;
+	width: auto;
+	height: auto;
 }
-                
+
 .communityTitle {
 	font-family: BLANCH_CONDENSED, monospace !important;
 	font-size: 200%;
@@ -84,22 +84,27 @@ src: url(font/BLANCH_CONDENSED.otf);
 
 .call-sponsors {
 	border: dashed black 2px;
-	background: #FAEEDE;
+	background: #faeede;
 	padding: 0 15px;
-    flex: 1 1 100%;
+	flex: 1 1 100%;
 	opacity: 0.85;
 	margin: 0 30vw 0 30vw;
 }
 
-@media (max-width: 350px){
-	.sponsorImg{
+p {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+		Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	font-size: 1rem;
+}
+
+@media (max-width: 350px) {
+	.sponsorImg {
 		max-width: 230px;
 	}
 }
 
-@media (max-width: 700px){
-	.sponsorBox{
+@media (max-width: 700px) {
+	.sponsorBox {
 		flex: 100%;
 	}
 }
-
