--- a/css/navigation-style.css
+++ b/css/navigation-style.css
@@ -9,129 +9,140 @@ FCEEE6 - Pink
 */
 
 @font-face {
-font-family: DIN;
-src: url(font/DIN.ttf);
+	font-family: DIN;
+	src: url(font/DIN.ttf);
 }
 
 @font-face {
-font-family: BLANCH_CONDENSED;
-src: url(font/BLANCH_CONDENSED.otf);
+	font-family: BLANCH_CONDENSED;
+	src: url(font/BLANCH_CONDENSED.otf);
 }
 
 #gisauBrand {
-  font-family: BLANCH_CONDENSED, serif;
-  font-size: 60px;
-  margin-top: 3px;
+	font-family: BLANCH_CONDENSED, serif;
+	font-size: 60px;
+	margin-top: 3px;
 }
 
 #gisauTabs li a {
-  font-family: DIN, monospace;
-  font-size: 16px;
-  margin-top: 5px;
+	font-family: DIN, monospace;
+	font-size: 16px;
+	margin-top: 5px;
 }
 
 #gisaunavsocial li img {
-  width: 25px;
-  height: 25px;
-  margin: 0 -10px;
-  padding: 0 0;
-  opacity: 0.6;
+	width: 25px;
+	height: 25px;
+	margin: 0 -10px;
+	padding: 0 0;
+	opacity: 0.6;
 }
 
 #gisaunavsocial li img:hover {
-  opacity: 1;
-  transform: scale(1.2);
-  transition: all .1s ease-in-out;
+	opacity: 1;
+	transform: scale(1.2);
+	transition: all 0.1s ease-in-out;
 }
 
-.navbar-default{
-    max-width: 100%;
+.navbar-default {
+	max-width: 100%;
+}
+
+.navbar {
+	padding-top: 0 !important;
+	padding-bottom: 0 !important;
 }
 
 @media (min-width: 900px) {
-.navbar-header {
-    float: left;
-  }
+	.navbar-header {
+		float: left;
+	}
 }
 .navbar-collapse {
-  padding-right: 15px;
-  padding-left: 15px;
-  overflow-x: visible;
-  -webkit-overflow-scrolling: touch;
-  border-top: 1px solid transparent;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
-          box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+	padding-right: 15px;
+	padding-left: 15px;
+	overflow-x: visible;
+	-webkit-overflow-scrolling: touch;
+	border-top: 1px solid transparent;
+	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
 }
 .navbar-collapse.in {
-  overflow-y: auto;
+	overflow-y: auto;
+}
+
+.navbar-custom {
+	height: 75px;
 }
 
 /* Dropdown Button */
 .dropbtn {
-  position: center;
-  color: #9d9d9d;
-  padding: 18px 16px 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  font-family: DIN, monospace;
+	position: center;
+	color: #9d9d9d;
+	padding: 18px 16px 16px;
+	font-size: 16px;
+	border: none;
+	cursor: pointer;
+	font-family: DIN, monospace;
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  
+.dropbtn:hover,
+.dropbtn:focus {
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
-  display: inline-block;
+	position: relative;
+	display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: whitesmoke;
-  min-width: 160px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: whitesmoke;
+	min-width: 160px;
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 
 .dropdown-menu {
-  display: none;
-  position: absolute;
-  background-color: whitesmoke;
-  min-width: 160px;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  z-index: 1;
+	display: none;
+	position: absolute;
+	background-color: whitesmoke;
+	min-width: 160px;
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+	z-index: 1;
 }
 .dropdown-menu a {
-  color: #9d9d9d;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
+	color: #9d9d9d;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	text-align: center;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
-
-@media (max-width: 900px) {
-  #gisaunavsocial {
-  display: none;
-  }
+.dropdown-content a:hover {
+	background-color: #ddd;
 }
 
-.navbar { margin-bottom:0;}
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+	display: block;
+}
+
+@media (max-width: 900px) {
+	#gisaunavsocial {
+		display: none;
+	}
+}
