--- a/css/blog.css
+++ b/css/blog.css
@@ -1,7 +1,3 @@
-body {
-    background-image: url(../media/background/bluebg.jpg);
-}
-
 .blog {
     padding: 50px 20px;
     text-align: left;
@@ -12,158 +8,74 @@ body {
     max-width: none;
 }
 
+.blog h1 {
+    font-family: "Trial2", "League Spartan" !important;
+}
+
 .blog h2 {
     font-size: 30px;
+    font-family: "Trial2", "League Spartan" !important;
 }
 
 .blog p {
     font-size: 16px;
+    font-family: "Montserrat", "Libre Baskerville";
 }
 
-/** TITLE **/
-.blog .blog_title {
-    font-family: Impact, Charcoal, sans-serif;
-    font-size: 100px;
+.blog {
+    padding: 0;
+}
+
+.blog .container {
+    padding: 0;
+}
+
+.blog .contain {
+    background-image: url(../media/background/bluebg.jpg);
+}
+
+.blog .contain_2 {
+    padding: 25px 100px;
+}
+
+/** HEADER **/
+.blog .header {
+    padding: 50px 120px;
+}
+
+.blog .header .blog_name {
     text-align: center;
 }
 
-/** AUTHOR **/
-.blog .author {
+.blog .header .blog_name h1 {
+    font-size: 120px !important;
+    color: #ffebe4 !important;
+}
+
+.blog .header .blog_title {
+    margin-top: 100px;
     margin-bottom: 50px;
 }
 
-.blog .author .name_card {
-    background-color: #e8abc5;
-    overflow: hidden;
-    width: 250px;
-    margin-left: 200px;
-    padding: 10px 0;
-    border-radius: 20px;
+.blog .header .blog_title img {
+    border-radius: 15px;
 }
 
-.blog .author img {
-    width: 75px;
-    height: 75px;
-    border-radius: 50%;
-    float: left;
+.blog .header .blog_title .title_desc {
+    padding-left: 20px;
+}
+
+.blog .header .blog_title .title_desc h1 {
+    color: #ffebe4 !important;
+    font-size: 60px !important;
+}
+
+.blog .header .blog_title .title_desc p {
     margin-left: 10px;
-    margin-right: 20px;
 }
 
-.blog .author p {
-    overflow: hidden;
-    margin-bottom: 0;
-}
-
-.blog .author .author_name {
-    margin-top: 10px;
-}
-
-.blog .author .author_name a {   
-    font-size: 20px;
-    color: white;
-    text-decoration: none;
-}
-
-.blog .author .date {
-    color: #6c616c;
-    font-size: 14px;
-}
-
-@media (max-width: 767px) {
-    .blog .author .name_card {
-        margin-left: 0;
-        width: 200px;
-    }
-
-    .blog .author img {
-        width: 50px;
-        height: 50px;
-        margin-right: 10px;
-    }
-
-    .blog .author .author_name {
-        margin-top: 0;
-    }
-
-    .blog .author .author_name a {
-        font-size: 18px;
-    }
-
-    .blog .author .date {
-        font-size: 12px;
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    .blog .author .name_card {
-        margin-left: 100px;
-        width: 225px;
-    }
-
-    .blog .author img {
-        width: 60px;
-        height: 60px;
-        margin-right: 10px;
-    }
-
-    .blog .author .author_name {
-        margin-top: 5px;
-    }
-
-    .blog .author .author_name a {
-        font-size: 18px;
-    }
-
-    .blog .author .date {
-        font-size: 13px;
-    }
-}
-
-@media (min-width: 991px) and (max-width: 1199px) {
-    .blog .author .name_card {
-        margin-left: 150px;
-        width: 225px;
-    }
-
-    .blog .author img {
-        width: 70px;
-        height: 70px;
-        margin-right: 10px;
-    }
-
-    .blog .author .author_name {
-        margin-top: 5px;
-    }
-
-    .blog .author .author_name a {
-        font-size: 19px;
-    }
-}
-
-/** MAIN IMAGE **/
-.blog .main_image img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 20px;
-}
-
-.blog .main_image p {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-@media (max-width: 767px) {
-	.blog .blog_title {
-	    font-size: 80px;
-	}
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-	.blog .blog_title {
-	    font-size: 90px;
-	}
+.blog .contain_2 .author p {
+    font-size: 18px
 }
 
 /** ARTICLE **/
@@ -227,7 +139,8 @@ body {
 }
 
 .blog .ajakan .card:hover {
-    box-shadow: 5px 5px 20px 5px #ffffff;
+    /** box-shadow: 5px 5px 10px 5px #ffaa81; **/
+    box-shadow: 5px 5px 10px 5px #8db4b9; 
 	transform: translateY(-10px);
 	-webkit-transform: translateY(-10px);
 	-moz-transform: translateY(-10px);
@@ -283,9 +196,9 @@ body {
 
 .testimonial .bottom .card {
     background: rgb(255, 255, 255);
-    box-shadow: 2px 2px 15px #fff;
+    box-shadow: 0 0 10px #dfe6e9;;
     margin: 0 15px;
-    /** border: 1px solid black; **/
+    border: none;
 }
 
 .testimonial .bottom .card .content {
@@ -354,124 +267,36 @@ body {
 	}
 }
 
-/**
-.blog .article_2 {
-    padding-top: 10px;
-}
-
-.blog .article_2 h2 {
-    font-size: 30px;
-}
-
-.blog .article_2 p {
-    font-size: 16px;
-}
-
-.blog .article_2 .first {
-    background: rgba(255, 250, 170);
-    padding: 10px 30px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 20px 0.5px #000000;
-    margin-top: 20px;
-}
-
-.blog .article_2 .first:hover {
-    box-shadow: 10px 5px 20px 5px #000000;
-	transform: translateY(-10px);
-	-webkit-transform: translateY(-10px);
-	-moz-transform: translateY(-10px);
-}
-
-.blog .article_2 .second {
-    background: rgba(210, 232, 113);
-    padding: 10px 30px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 20px 0.5px #000000;
-    margin-top: 20px;
-}
-
-.blog .article_2 .second:hover {
-    box-shadow: 5px 5px 20px 5px #000000;
-	transform: translateY(-10px);
-	-webkit-transform: translateY(-10px);
-	-moz-transform: translateY(-10px);
-}
-
-.blog .article_2 .step {
-    margin-top: 40px;
-    padding: 20px;
-    background: #dfe6e9;
-}
-
-.blog .article_2 .step .step_1 {
-    display: flex;
-    margin-top: 30px;
-}
-
-.blog .article_2 .step img {
-    padding: 0 20px;
-    padding: 0 20px;
-    max-width: 500px;
-    max-height: 500px;
-    width: auto;
-    height: 100%;
-}
-**/
-
-/**
-.blog .container .slider .image {
-    max-height: 550px;
-}
-
-.blog .last_image .container {
-    position: relative;
-    max-width: none;
+.contain_2 .article_2 {
     margin-top: 50px;
-  }
-  
-.blog .last_image .container .image {
-    opacity: 1;
-    display: block;
+}
+
+.blog .article_2 .fun_fact {
+    background: #dfe6e9;
+    padding: 30px 40px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 10px 0.5px #000000;
+    float: right;
+}
+
+.contain_2 .step {
+    margin-top: 20px;
+}
+
+.contain_2 .step .steps {
+    padding: 15px 0;
+}
+
+.contain_2 .example {
+    margin-top: 50px;
+}
+
+.contain_2 .example img {
+    margin-top: 10px;
     width: 100%;
-    height: auto;
-    transition: .5s ease;
-    backface-visibility: hidden;
-  }
-  
-.blog .last_image .container .middle {
-    transition: .5s ease;
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+}
+
+.contain_2 .example p {
+    margin-top: 5px;
     text-align: center;
-  }
-  
-.blog .last_image .container:hover .image {
-    opacity: 0.3;
-  }
-  
-.blog .last_image .container:hover .middle {
-    opacity: 1;
-  }
-  
-.blog .last_image .container .text {
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    font-weight: bold;
-    padding: 16px 32px;
-  }
-
-.bx-wrapper {
-	border: none !important;
 }
-
-.bx-wrapper img {
-    display: block;
-    max-height: 100%;
-    margin-bottom: -25px;
-}
-**/
-
